<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ButtonCase">
    <string name="app_name">ListHub</string>
    <string name="app_name_title">L I S T H U B</string>
    <string name="homeString">Home</string>
    <string name="listsString">Lists</string>
    <string name="exampleString">Example</string>
    <string name="generalListTitle">General To-Do</string>
    <string name="groceryListTitle">Groceries</string>
    <string name="cookingListTitle">Cooking</string>
    <string name="eventsListTitle">Events</string>
    <string name="shoppingListTitle">Shopping</string>
    <string name="businessPlanListTitle">SBA Business Plan Checklist</string>
    <string name="morningRoutineTitle">Morning Routine</string>
    <string name="bedtimeRoutineTitle">Bedtime Routine</string>
    <string name="omeletRecipeTitle">Omelette Recipe</string>
    <string name="porridgeRecipeTitle">Porridge Recipe</string>
    <string name="recipesListTitle">Recipes</string>
    <string name="remindersListTitle">Daily Reminders</string>
    <string name="generalListTasks"></string>
    <string name="groceryListTasks">Eggs\nKosher Salt\nFresh Ground Black Pepper\nButter\nShredded Cheese\nParmesan\nPorridge Oats\nMilk\nGreek Yogurt\nHoney</string>
    <string name="cookingListTasks">Buy Omelette Ingredients\nCook Omelette\nBuy Porridge Ingredients\nCook Porridge</string>
    <string name="eventsListSections">Finished\nGoing\nEvents</string>
    <string name="eventsListTasks">Ashley\'s Wedding Shower\nMark\'s Birthday Party
        \tChristmas Day Party\nNew Year\'s Celebration</string>
    <string name="shoppingListSections">Bought\nTo Buy\nWishlist\nSaved Items</string>
    <string name="shoppingListTasks"></string>
    <string name="businessPlanListSections">Completed\nIn Progress\nNext Steps
        \nAssembling My Business Plan\nExecutive Summary\nFinancial Projections
        \nFunding Request\nMarketing and Sales Strategies\nProduct/Service Line
        \nMarket Research\nCompany Description\nPreparing to Write a Business Plan</string>
    <string name="businessPlanListTasks">I have decided the type of business plan to write.
        \nI have a business plan started, in-progress, or complete.
        \nI know the audience of my business plan.
        \nI know the need my business provides to the community.
        \nI know my potential customers.
        \nI know why my potential customers will buy my product or service.
        \nI know how to reach potential customers.
        \nI know where I will get the financial resources to start or grow my business.

        \tI have a mission statement.
        \nI know my attainable business goals and objectives.
        \nIs my product or service new and exciting?
        \nI know how my product is developed or service is provided.
        \nI know who will buy my product or service.
        \nI know how my business will compare to competitors in my industry.
        \nI know how my business will manage foreseeable industry changes.
        \nI know how my company management is organized and who makes the decisions.
        \nDo I anticipate my business management structure changing?
        \nI know the values that drive my business.
        \nI know how many employees I have, what they do, and how they are paid.
        \nI know the principal members of my business and their roles.
        \nI can include a brief resume on each key manager within my business.
        \nI know the legal structure of my business, such as licenses and/or permits my
        company operates with or needs.

        \tI know my industry.
        \nI know my industry\'s current size and what share of that market I will have.
        \nI know my competitors in my industry.
        \nI know my direct competitors in my industry.
        \nAre there regulations that apply to my industry?
        \nI know the trends in my industry (growth, consumer preferences, product development)?
        \nI know how and where my company fits in the industry.
        \nI know the advantages and/or disadvantages I have over my competitors.
        \nI know the barriers to entering this industry. (examples: high initial capital costs,
        unique technology, customer need for brand recognition, etc.)
        \nI know the demographics of my current or prospective customers.
        \nI know what customers buy and why.
        \nMy product is accessible to customers.
        \nI know the price my customers will pay for my product or service.
        \nWill my customers prefer my product over the alternatives?
        \nI know the market segments or groups that are more likely to buy my product.

        \tI know what product or service my business provides.
        \nI have a pricing structure.
        \nI know what factors give me a competitive advantage or disadvantage.
        \nI keep an inventory.
        \nI know my suppliers.
        \nI know the lifecycle stage of my product or service.
        \nI am performing or planning research and development activities?
        \nI know what intellectual property rights I have for my product or service?

        \tI know my plan to grow my business.
        \nI know how to communicate with my customers.
        \nI know how I will sell my product or service.
        \nI have identified my market segment.
        \nI have tailored product offerings, prices, distribution, promotional efforts,
        and services toward identified market segments.
        \nI have addressed unmet customer needs that offer adequate profitability for
        \nthe business and focus on the target markets it can best serve.
        \nI have considered changes in customer needs and the business environment
        as well as emerging opportunities and threats.
        \nI have identified new markets that I can successfully target.

        \tI know my current and future (five years) funding requirements.
        \nI know how I will intend to use the funds I receive.
        \nI know my strategic financial situational plans for the future.
        \nI have completed a Projected Balance Sheet statement.

        \tI have completed a Cash Flow Projection statement.
        \nI have completed a Profit and Loss (Income) Projection statement.
        \nI have aligned my financial projections with my funding requests.

        \tI have included a summary of my business.
        \nI have included a summary of my products/services that I sell or plan to sell.
        \nI have included my mission statement.
        \nI have included a summary of my management and organizational structure.
        \nI have included a summary of my target market and ideal customer.
        \nI have included a summary of the future of my business and my industry.
        \nI have included a summary of my banking relationships and information
        regarding my current investors.
        \nI have included a summary of my financial data and projections.

        \tI have appendices in my business plan that include materials needed
        to support what I claimed in my business plan.
        \nI have a cover page.
        \nI have a table of contents.
        \nI have a large, 3-ring binder with tabbed dividers –
        one for each of the business plan sections.
        \nI have formatted the sections using the best practices outlined in the course.
        \nI have asked two people to review my business plan.
        \nI have assembled my business plan in the correct order.

        \tGather all the necessary information and conduct all the research you will need to write
        an accurate and complete business plan. Use free SBA tools to aid your research.
        \nPrepare a draft business plan. Doing it is the only way you will learn. It doesn\'t have to
        be perfect, long or complete. Prepare the parts of the plan that you can.
        \nDiscuss your draft plan and any questions you have with a business mentor, coach, academic
        advisor, SBA representative or another seasoned business advisor.
        \nUse the information you receive to prepare a more finished product. Remember, the
        business plan is a living document. It is a work in progress. Refine it, improve it and use
        it as the blueprint to your success.</string>
    <string name="businessPlanListNote">Source: https://www.sba.gov/sites/default/files/2018-01/CHECKLIST_-_How_to_Write_a_Business_Plan.pdf
        \n\nYou wouldn\'t drive 2,000 miles without a map,
        so don\'t start a business without writing a business plan; it\'s your roadmap to success!
        \n\nAs explained in the course, business planning helps to ensure business success. And, as the
        blueprint for your business, a business plan is a critical element because it showcases your
        business\'s vision, product/service, marketing strategies, and financial projections.
        \n\nRemember, a business plan outlines the complete operating framework of your business by
        detailing who you are, why you\'re in business, what you do, how you do it, where you operate,
        how you will generate profits, who your customers are, and why your business is important.
        \n\nThe checklist below covers information you learned in the course and organizes the checkpoints
        based on the sections of the business plan as well as what is outlined in the Build Your Business
        Plan tool. Use the checklist to measure where you are in the process of collecting the necessary
        material. As you progress, refer to the Build Your Business Plan tool for additional business plan
        writing support as needed.
        \n\nLet\'s begin charting your path to writing your business plan!</string>
    <string name="morningRoutineSteps">Wake up &amp; play your morning playlist
        \nMake your bed\nWash up in the bathroom\nDo some morning stretches
        \nPrepare &amp; eat breakfast\nReview today\'s tasks</string>
    <string name="bedtimeRoutineSteps">Prepare &amp; eat dinner
        \nWash dishes &amp; clean house\nPrepare lunch for tomorrow
        \nWash up in the bathroom\nPrepare tasks for tomorrow
        \nPrepare your items for tomorrow (phone, wallet, keys, etc.)
        \nLights out &amp; go to bed</string>
    <string name="renameSectionString">Rename section</string>
    <string name="enterSectionTitleString">Enter section title</string>
    <string name="manageLabelsString">Manage labels</string>
    <string name="cancelString">CANCEL</string>
    <string name="saveString">SAVE</string>
    <string name="doneString">DONE</string>
    <string name="removeString">REMOVE</string>
    <string name="newLabelString">NEW LABEL</string>
    <string name="deleteSectionString">DELETE SECTION</string>
    <string name="closeString">CLOSE</string>
    <string name="repeatEveryString">Repeat every &#8230;</string>
    <string name="sunString">SUN</string>
    <string name="monString">MON</string>
    <string name="tueString">TUE</string>
    <string name="wedString">WED</string>
    <string name="thuString">THU</string>
    <string name="friString">FRI</string>
    <string name="satString">SAT</string>
    <string name="toDoListDetails">To-do list details</string>
    <string name="titleLabel">Title: </string>
    <string name="labelsLabel">Labels: </string>
    <string name="numTasksLabel"># tasks: </string>
    <string name="numCompletedLabel"># completed: </string>
    <string name="numSectionsLabel"># sections: </string>
    <string name="archivedLabel">Archived: </string>
    <string name="yesString">Yes</string>
    <string name="taskDetailsString">Task details</string>
    <string name="noteLabel">Note: </string>
    <string name="dueDateLabel">Set date: </string>
    <string name="creationDateLabel">Date created: </string>
    <string name="areYouSureString">Are you sure?</string>
    <string name="removeDatePrompt">The saved date will be removed.</string>
</resources>