<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorButton"
    android:paddingTop="@dimen/_14sdp" android:paddingStart="@dimen/_18sdp"
    android:paddingEnd="@dimen/_18sdp" android:paddingBottom="@dimen/_10sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="@dimen/_18sdp"
        android:text="@string/repeatEveryString"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sundayOption"
            android:background="@drawable/ic_circle_outline_gray"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:text="@string/sunString"
            android:textColor="@color/colorLightGray"/>

        <TextView
            android:id="@+id/mondayOption"
            android:background="@drawable/ic_circle_outline_gray"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:text="@string/monString"
            android:textColor="@color/colorLightGray"/>

        <TextView
            android:id="@+id/tuesdayOption"
            android:background="@drawable/ic_circle_outline_gray"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:text="@string/tueString"
            android:textColor="@color/colorLightGray"/>

        <TextView
            android:id="@+id/wednesdayOption"
            android:background="@drawable/ic_circle_outline_gray"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:text="@string/wedString"
            android:textColor="@color/colorLightGray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/thursdayOption"
            android:background="@drawable/ic_circle_outline_gray"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:text="@string/thuString"
            android:textColor="@color/colorLightGray"/>

        <TextView
            android:id="@+id/fridayOption"
            android:background="@drawable/ic_circle_outline_gray"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:text="@string/friString"
            android:textColor="@color/colorLightGray"/>

        <TextView
            android:id="@+id/saturdayOption"
            android:background="@drawable/ic_circle_outline_gray"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:text="@string/satString"
            android:textColor="@color/colorLightGray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/cancelOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="sans-serif-black"
            android:padding="@dimen/_8sdp"
            android:text="@string/cancelString"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/doneOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="sans-serif-black"
            android:padding="@dimen/_8sdp"
            android:text="@string/doneString"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>