<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:background="@color/colorButton"
    android:paddingTop="@dimen/_14sdp" android:paddingStart="@dimen/_18sdp"
    android:paddingEnd="@dimen/_18sdp" android:paddingBottom="@dimen/_10sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="sans-serif-black"
        android:text="@string/areYouSureString"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/confirmDeleteMessage"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:textSize="@dimen/_12sdp"
        android:text="@string/removeDatePrompt"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/cancelOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="sans-serif-black"
            android:padding="@dimen/_8sdp"
            android:text="@string/cancelString"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/removeOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="sans-serif-black"
            android:padding="@dimen/_8sdp"
            android:text="@string/removeString"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>