<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="@dimen/_276sdp"
    android:layout_height="wrap_content" android:background="@color/colorButton"
    android:paddingTop="@dimen/_14sdp" android:paddingBottom="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="sans-serif-black"
            android:text="@string/manageLabelsString"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:id="@+id/newLabelOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/newLabelOptionIcon"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:src="@drawable/ic_add_custom"/>

            <TextView
                android:id="@+id/newLabelOptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11sdp"
                android:fontFamily="sans-serif-black"
                android:text="@string/newLabelString"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@color/colorDarkGray"/>

    <ScrollView
        android:id="@+id/labelsScrollView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:overScrollMode="never"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/labelsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:orientation="vertical"/>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/colorDarkGray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp">

        <TextView
            android:id="@+id/cancelOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="sans-serif-black"
            android:padding="@dimen/_8sdp"
            android:text="@string/cancelString"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/saveOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="sans-serif-black"
            android:padding="@dimen/_8sdp"
            android:text="@string/saveString"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>